# sanskrit_tibetan_workspace

./: .gitignore  ARCHITECTURE.md  LICENSES.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  svelte.config.js  vite.config.ts
bench/: index.html
data/: translations.jsonl
data/reports/: amarakoza-nlp.md  duplicates.md  equiv-extraction.md  equiv-ocr-extraction.md  equiv-pending-tasks.md  hirakawa-filter.md  phase1-summary.md  phase2-benchmark.md  phase2-summary.md  slug-mapping-proposal.md  top10k.txt  top10k_bo.txt  top50k.txt  translation_coverage.md  wylie-fix-handoff.md
data/reports/audit-2026-04-30/: audit-A-indices.md  audit-A-meta-consistency.md  audit-A-reverse-precision.md  audit-A-summary.md  audit-A-translations.md  audit-A-warnings.md  audit-A-zh-contamination.md  audit-B-coverage.md  audit-B-eu-quality.md  audit-B-summary.md  audit-C-a11y.md  audit-C-demo-guide.md  audit-D-build.md  audit-D-buildperf.md  audit-D-decl-race.md  audit-D-latency.md  audit-D-summary.md  audit-D-svelte5.md  audit-D-sw.md  audit-D-tests.md  audit-E-deploy.md  audit-summary.md  lighthouse-home.report.html  lighthouse-home.report.json  sentinel-50-queries-draft.md
data/sources/abhyankar-grammar/: meta.json
data/sources/amarakosa/: meta.json
data/sources/amarakosa-context/: meta.json
data/sources/amarakosa-ontology/: meta.json
data/sources/apte-bilingual/: meta.json
data/sources/apte-english-sanskrit/: meta.json
data/sources/apte-sandic/: meta.json
data/sources/apte-sanskrit-english/: meta.json
data/sources/ashtadhyayi-anuvrtti/: meta.json
data/sources/ashtadhyayi-english/: meta.json
data/sources/benfey/: meta.json
data/sources/bhsd/: meta.json
data/sources/bloomfield-vedic-concordance/: meta.json
data/sources/bopp-comparative/: meta.json
data/sources/bopp-latin/: meta.json
data/sources/burnouf/: meta.json
docs/: decisions-pending.md  declension-tab.md  dict-source.md  schema.json  v1-feedback.md
scripts/: audit_indices.py  audit_meta_consistency.py  audit_reverse_precision.py  audit_translations.py  audit_translations_merge.py  audit_warnings.py  batch_status.py  bench.py  build_declension.py  build_equivalents_index.py  build_fst.py  build_meta.py  build_reverse_index.py  build_reverse_meta.py  build_tier0.py  detect_duplicates.py  extract_amarakoza_synonyms.py  extract_equiv_4lang.py  extract_equiv_amarakoza.py  extract_equiv_bodkye.py  extract_equiv_bonwa.py  extract_equiv_hirakawa.py  extract_equiv_hopkins.py  extract_equiv_karashima.py  extract_equiv_tibchn.py  extract_equiv_turfan.py  extract_equiv_yogacara.py  extract_from_v1.py  extract_v1_bilex.py  frequency.py  postprocess_equiv_body_schema.py  postprocess_hirakawa_filter.py  postprocess_ja_de_fields.py  postprocess_tib_chn_wylie.py  translate_batch.py  translate_en_extended.py  translate_eu.py  verify.py
scripts/lib/: __init__.py  html_utils.py  io.py  normalize.py  reverse_tokens.py  snippet.py  tibetan_wylie.py  transliterate.py
scripts/ocr/: lib.py
src/routes/: +layout.svelte  +page.svelte
src/styles/: theme.css
static/: _headers  indices  sw.js
tests/: test_html_utils.py  test_normalize.py  test_reverse_tokens.py  test_snippet.py  test_transliterate.py
(+154 files in other folders)
