[project]
name = "sanskrit-tibetan-workspace"
version = "0.1.0"
description = "Sanskrit-Tibetan-Chinese multi-dictionary search + declension + reader web workspace (v2)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "haMsa", email = "naspatterns@gmail.com" }]

dependencies = [
    # JSONL / JSON Schema validation
    "jsonschema>=4.21",
    "fastjsonschema>=2.19",
    # XDXF / HTML parsing (lxml for Sanskrit XDXF, beautifulsoup4 for Apple dict HTML)
    "lxml>=5.2",
    "beautifulsoup4>=4.12",
    # Progress bars during long extracts
    "tqdm>=4.66",
    # Compression for Phase 2 indices (msgpack + zstd)
    "msgpack>=1.0",
    "zstandard>=0.22",
    # Phase 2: translation batch (Sonnet 4.5 Batch API for FB-2 expansion)
    "anthropic>=0.39",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "pdfplumber>=0.11.9",
    "pypdf>=6.10.2",
    "xlrd<2",
    "pytesseract>=0.3.13",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "setuptools>=82.0.1",
    "pyewts>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[tool.uv]
# Let uv manage the Python toolchain automatically per .python-version
managed = true
# pyewts (Tibetan Unicode ↔ EWTS Wylie) imports pkg_resources at build time
# without declaring it. setuptools >=81 removed pkg_resources, so pin an older
# setuptools just for pyewts's build environment.
extra-build-dependencies = { pyewts = ["setuptools<81"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter
